# bardgit

./: README.md
Algoritms_CPP/Dynamic_programming/: dynamic_programming_5.cpp
Algoritms_CPP/Linear_algoritms/: linear_algoritm_1.md  linear_algoritm_10.cpp  linear_algoritm_4.cpp  linear_algoritm_4.md  linear_algoritm_5.cpp  linear_algoritm_7.cpp  linear_algoritm_8.cpp
Algoritms_CPP/trenirovki_po_algoritmam_7_Yandex/contest_1/: main1.cpp
Algoritms_CPP/trenirovki_po_algoritmam_7_Yandex/contest_3/: main6.cpp
C/decimal/: test.out
C/decimal/decimal/: Makefile  s21_decimal.h  test.c
C/decimal/headers/: main_test.h  secondary.h
C/decimal/sources/: comparisons.c  s21_add.c  s21_div.c  s21_floor.c  s21_from_decimal_to_float.c  s21_from_decimal_to_int.c  s21_from_float_to_decimal.c  s21_from_int_to_decimal.c  s21_mul.c  s21_negate.c  s21_round.c  s21_sub.c  s21_truncate.c  secondary.c
C/decimal/tests/: s21_add_sub_test.c  s21_comparison_test.c  s21_div_test.c  s21_floor_test.c  s21_from_decimal_to_float_test.c  s21_from_decimal_to_int_test.c  s21_from_float_to_decimal_test.c  s21_from_int_to_decimal_test.c  s21_main_test.c  s21_mul_test.c  s21_negate_test.c  s21_round_test.c  (+1 more)
C/matrix/: Makefile  s21_matrix.h  test.txt
C/string_h/: Makefile  s21_string.h
C/tetris/: Makefile  backend.c  backend.h  frontend.c  frontend.h  game.c  game.h  main.c  test.c  test.h
C/utilit_cat_grep/: Makefile
Cpp/: gregorian_calendar.cpp
Cpp/ComputerClub/: Makefile  README.md  Readme.md  text.txt
Cpp/Log_Scanning/: main2.cpp  main3.cpp
Cpp/QT/3D_viewer/: CMakeLists.txt  Makefile  README.md  info.h  main.cpp  qmake6.pro
Cpp/QT/3D_viewer/Controller/: controller.cpp  controller.h
Cpp/QT/3D_viewer/Model/: figure.cpp  figure.h  file_parser.cpp  file_parser.h  file_ready.cpp  file_ready.h  matrix.cpp  matrix.h  model.cpp  model.h
Cpp/QT/3D_viewer/View/: Makefile  moc_view.cpp  openGL.cpp  openGL.h  view.cpp  view.h
Cpp/QT/3D_viewer/controller/: controller.cpp  controller.h
Cpp/QT/3D_viewer/model/: Makefile  file_parser.cpp  file_parser.h  file_ready.cpp  file_ready.h  main.cc  model.cpp  model.h
Cpp/QT/3D_viewer/view/: Makefile  main.cpp  moc_view.cpp  openGL.cpp  openGL.h  view.cpp  view.h
Cpp/Scanning_Malicious_Files/: CMakeLists.txt  File.txt  Makefile  README.md
Cpp/Scanning_Malicious_Files/resources/: base.cvs
Cpp/Scanning_Malicious_Files/scanner/: CMakeLists.txt  main.cc
Cpp/Scanning_Malicious_Files/scannerLib/: CMakeLists.txt  FileScanner.cpp  FileScanner.h  HashDatbase.cpp  HashDatbase.h  Logger.cpp  Logger.h  ThreadPool.h
Cpp/Scanning_Malicious_Files/tests/: CMakeLists.txt  tests.cpp
Cpp/TZ/loggerLib/tests/: CMakeLists.txt  test.cpp
Cpp/moduli/: main.cpp  math.cppm
algoritms/Dynamic_programming/: dynamic_programming_3.cpp  dynamic_programming_6.cpp  dynamic_programming_7.cpp  dynamic_programming_8.cpp  main.cpp
algoritms/Linear_algoritms/: linear_algoritm_2.cpp  linear_algoritm_5.md  linear_algoritm_6.cpp
cpp/: gregorian_calendar.cpp
cpp/Character_set/: README.md  main.cpp
cpp/Connected_components/: a.out  main.cpp
cpp/Depth-first_search/: README.md  main.cpp
cpp/Game_of_Life/: CMakeLists.txt  Makefile  README.md
cpp/Game_of_Life/src/: main.cpp
cpp/Meetings/: main.cpp
cpp/STL_library/: Makefile  main_test.cpp  s21_containersplus.h  tree.hpp
cpp/TZ/: main1.cpp
cpp/cheating/: main.cpp
cpp/closed_key/: main.cpp
cpp/error/: README.md
cpp/ravelsi/: RGBA.cpp  stack.cpp
cpp/s21_container/: a.out  main.cpp  test.cpp  vector.hpp
cpp/s21_containers/: main.cpp  main2.c  s21_list.cpp  s21_map.cpp  test.cpp  tree.cpp  tree.h
cpp/two_sum/: README.md  main.cpp
cpp/unique_elements/: README.md  main.cpp
trenirovki_po_algoritmam_7/contest_1/: temp.cpp
trenirovki_po_algoritmam_7/contest_2/: main1.cpp  main5.cpp  temp.cpp
trenirovki_po_algoritmam_7/contest_4/: main3.cpp
trenirovki_po_algoritmam_7_Yandex/contest_1/: main2.cpp  main3.cpp  main4.cpp  main5.cpp  main6.cpp  main7.cpp  main8.cpp
trenirovki_po_algoritmam_7_Yandex/contest_2/: main10.cpp  main3.cpp  main4.cpp  main5.cpp  main7.cpp  main9.cpp
trenirovki_po_algoritmam_7_Yandex/contest_3/: main1.cpp  main4.cpp  main5.cpp  main7.cpp
trenirovki_po_algoritmam_7_Yandex/contest_4/: main2.cpp  main5.cpp  main6.cpp  main8.cpp
(+347 files in other folders)
